--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>Snort IDS Web Reporter</title>
+	<title>Text2Hand</title>
 	<!-- Bootstrap core CSS -->
 	<link rel = 'stylesheet' href= "{{url_for('static', filename='css/bootstrap.min.css')}}"/>
 	<!-- Custom styles for this template -->
@@ -28,7 +28,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Snort IDS Web Reporter</a>
+				<a class="navbar-brand" href="/">Text2Hand</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<!-- <ul class="nav navbar-nav navbar-right">
@@ -47,11 +47,11 @@
 		<div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar">
-					<li><a href="#">Analytics</a></li>
+					<li><a href="#">Videos</a></li>
 				</ul>
 			</div>
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-				<h1 class="page-header">Snort IDS Web Reporter</h1>
+				<h1 class="page-header">Page Header</h1>
 				<!-- <div class="row placeholders">
 					<div class="col-xs-6 col-sm-3 placeholder">
 						<img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
