--- a/templates/index.html
+++ b/templates/index.html
@@ -31,12 +31,7 @@
 				<a class="navbar-brand" href="/">Text2Hand</a>
 			</div>
 			<div class="navbar-collapse collapse">
-				<!-- <ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Dashboard</a></li>
-					<li><a href="#">Settings</a></li>
-					<li><a href="#">Profile</a></li>
-					<li><a href="#">Help</a></li>
-				</ul> -->
+
 				<form class="navbar-form navbar-right">
 					<input type="text" class="form-control" placeholder="Search...">
 				</form>
@@ -51,55 +46,31 @@
 				</ul>
 			</div>
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-				<h1 class="page-header">Page Header</h1>
-				<!-- <div class="row placeholders">
-					<div class="col-xs-6 col-sm-3 placeholder">
-						<img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
-						<h4>Label</h4>
-						<span class="text-muted">Something else</span>
-					</div>
-					<div class="col-xs-6 col-sm-3 placeholder">
-						<img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
-						<h4>Label</h4>
-						<span class="text-muted">Something else</span>
-					</div>
-					<div class="col-xs-6 col-sm-3 placeholder">
-						<img data-src="holder.js/200x200/auto/sky" class="img-responsive" alt="Generic placeholder thumbnail">
-						<h4>Label</h4>
-						<span class="text-muted">Something else</span>
-					</div>
-					<div class="col-xs-6 col-sm-3 placeholder">
-						<img data-src="holder.js/200x200/auto/vine" class="img-responsive" alt="Generic placeholder thumbnail">
-						<h4>Label</h4>
-						<span class="text-muted">Something else</span>
-					</div>
-					</div> --> <!-- row placeholders -->
-					<h2 class="sub-header"> Header</h2>
-					<div class="table-responsive">
-						<table class="table table-striped">
-							<thead>
-								<tr>
-									<th>#</th>
-									<th>Source</th>
-									<th>Destination</th>
-									<th>Signature</th>
-									<th>Date</th>
-								</tr>
-							</thead>
-							<tbody>
-	
-								
-							</tbody>
-						</table>
-					</div>
-				</div>
+
+				<p><strong>English -> ASL:</strong></p>
+				<form name="input" method="post" action="/">
+					<input type="text" name="to" class="form-control" placeholder="TO"> <br>
+					<input type="text" name="subject" placeholder="SUBJECT" class="form-control"><br>
+					<input type="submit" value="SEND" class="btn btn-default" >
+				</form>
+				<p><br><button id="startStopButton" class="btn btn-default">Start Voice Recognition</button><br></p>
+				<p>
+					BODY:
+					<textarea id="transcript" style="width: 100%; height: 100px" ></textarea>
+				</p>
+				<button id="translate" class="btn btn-default" >Translate</button>
+				<p id="prueba">{{to }} : {{subject}}</p>
+
+
 			</div>
 		</div>
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/docs.min.js')}}"></script>
+		<script src="{{url_for('static', filename='js/coffee-script-1.4.0.min.js')}}"></script>
+		<script src="{{url_for('static', filename='js/recognition.js')}}"></script>
 	</body>
 </html>
