--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 	<link rel = 'stylesheet' href= "{{url_for('static', filename='css/bootstrap.min.css')}}"/>
 	<!-- Custom styles for this template -->
 	<link rel = 'stylesheet' href= "{{url_for('static', filename='css/dashboard.css')}}"/>
+	<link rel = 'stylesheet' href= "{{url_for('static', filename='css/main.css')}}"/>
 	<!-- Just for debugging purposes. Don't actually copy this line! -->
 	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -58,12 +59,27 @@
 					BODY:
 					<textarea id="transcript" style="width: 100%; height: 100px" ></textarea>
 				</p>
-				<button id="translate" class="btn btn-default" >Translate</button>
+				<button id="translate" class="btn btn-default" data-toggle="modal" data-target="#myModal">Translate</button>
 				<p id="prueba">{{to }} : {{subject}}</p>
 
 
 			</div>
 		</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	     <div class="modal-body">
+	        <video  width="100%" height="100%"controls autoplay>
+			  <source src="{{url_for('static', filename='videos/1396164424.32.mp4')}}" type="video/mp4">
+			</video>	      
+		</div>
+	    </div>
+	  </div>
+	</div>
+
+
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
@@ -72,5 +88,6 @@
 		<script src="{{url_for('static', filename='js/docs.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/coffee-script-1.4.0.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/recognition.js')}}"></script>
+		<script src="{{url_for('static', filename='js/main.js')}}"></script>
 	</body>
 </html>
