--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
 					<input type="text" name="subject" placeholder="SUBJECT" class="form-control"><br>
 					<input type="submit" value="SEND" class="btn btn-default" >
 				</form>
-				<p><br><button id="startStopButton" class="btn btn-default">Start Voice Recognition</button><br></p>
+				<p><br><button id="startStopButton" class="btn btn-default">Start</button><br></p>
 				<p>
 					BODY:
 					<textarea id="transcript" style="width: 100%; height: 100px" ></textarea>
