--- a/templates/sendmail.html
+++ b/templates/sendmail.html
@@ -42,25 +42,16 @@
 		<div class="row">
 			<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar">
-					<li><a href="#">Videos</a></li>
+					<li><a href="#"></a></li>
 				</ul>
 			</div>
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
-				<p><strong>English -> ASL:</strong></p>
-				<form name="input" method="POST" action="/sendmail">
-					<input type="text" name="to" class="form-control" placeholder="TO"> <br>
-					<input type="text" name="subject" placeholder="SUBJECT" class="form-control"><br>
-					<input type="text" name="filename" placehorlder="video" class="form-control"><br>
-					<input type="submit" value="SEND" class="btn btn-default" >
-				</form>
-				<p><br><button id="startStopButton" class="btn btn-default">Start Voice Recognition</button><br></p>
-				<p>
-					BODY:
-					<textarea id="transcript" style="width: 100%; height: 100px" ></textarea>
+				<p><strong>Mail sended to:</strong> {{ send_to }}<br>
+					 Video Link: <a href="{{url}}">Dropbox</a>
 				</p>
-				<button id="translate" class="btn btn-default" >Translate</button>
-				<p id="prueba">{{to }} : {{subject}}</p>
+				
+				
 
 
 			</div>
