--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 	<![endif]-->
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<!-- 	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -38,14 +38,18 @@
 				</form>
 			</div>
 		</div>
-	</div>
+	</div> -->
+
+
 	<div class="container-fluid">
+
 		<div class="row">
-			<div class="col-sm-3 col-md-2 sidebar">
+		<!-- 	<div class="col-sm-3 col-md-2 sidebar">
 				<ul class="nav nav-sidebar">
 					<li><a href="#">Videos</a></li>
 				</ul>
-			</div>
+			</div> -->
+			<img src="{{url_for('static', filename='images/text2hands_logo.png')}}" alt="some_text">
 			<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
 
 				<p><strong>English -> ASL:</strong></p>
