Working on index interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,12 +52,13 @@
 			<img src="{{url_for('static', filename='images/text2hands_logo.png')}}" class='logo'alt="some_text">
 			<div class="col-md-12">
 
-				<p><br><button id="startStopButton" class="btn btn-default">Start</button><br></p>
 				<p>
-					<input type="image" id="startStopButton"  src="{{url_for('static', filename='images/microphone.png')}}" name="image" width="32" height="32">
+					<input type="image" id="startStopButton"  src="{{url_for('static', filename='images/microphone.png')}}" name="image" value="Start">
 				
 					<textarea id="transcript" class="form-control"style="height: 100px" ></textarea>
 				</p>
+
+
 				<button id="translate" type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">show me the hands!</button>
 
 				<p><strong>English -> ASL:</strong></p>
