--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,8 @@
 	<!-- Custom styles for this template -->
 	<link rel = 'stylesheet' href= "{{url_for('static', filename='css/dashboard.css')}}"/>
 	<link rel = 'stylesheet' href= "{{url_for('static', filename='css/main.css')}}"/>
+	<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+
 	<!-- Just for debugging purposes. Don't actually copy this line! -->
 	<!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -58,7 +60,9 @@
 				
 					<textarea id="transcript" class="form-control"style="height: 100px" ></textarea>
 				</p>
-				<button id="translate" type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">show me the hands!</button>
+				<button id="trans" type="button" class="btn btn-success">Translate</button>
+				<button id="translate" type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">Show Me The Hands!</button>
+				
 
 				<p><strong>English -> ASL:</strong></p>
 				<form name="input" method="POST" action="/sendmail">
@@ -74,9 +78,9 @@
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
 	  <div class="modal-dialog">
 	    <div class="modal-content">
-	     <div class="modal-body">
+	     <div class="modal-body" id="video_container">
 	        <video  width="100%" height="100%"controls autoplay>
-			  <source src="{{url_for('static', filename='videos/1396164424.32.mp4')}}" type="video/mp4">
+			  <source id="video_container" src="{{url_for('static', filename='videos/1396164424.32.mp4')}}" type="video/mp4">
 			</video>	      
 		</div>
 	    </div>
@@ -87,7 +91,6 @@
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/docs.min.js')}}"></script>
 		<script src="{{url_for('static', filename='js/coffee-script-1.4.0.min.js')}}"></script>
