--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,10 @@
-.modal-content{
+.modal-content-video{
 	background-color: transparent;
 	box-shadow: 0 0px 0px rgba(0,0,0,0);
 	border: 0;
 }
 
-.modal-body{
+.modal-body-video{
 	padding: 0;
 }
 
