--- a/templates/index.html
+++ b/templates/index.html
@@ -59,23 +59,15 @@
 				</p>
 
 
-				<button id="translate" type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">show me the hands!</button>
-
-				<p><strong>English -> ASL:</strong></p>
-				<form name="input" method="POST" action="/sendmail">
-					<input type="text" name="to" class="form-control" placeholder="TO"> <br>
-					<input type="text" name="subject" placeholder="SUBJECT" class="form-control"><br>
-					<input type="hidden" name="filename" placehorlder="video" class="form-control"><br>
-					<input type="submit" value="SEND" class="btn btn-default" >
-				</form>
+				<button id="translate" type="button" class="btn btn-success" data-toggle="modal" data-target="#videoModal">show me the hands!</button>
 			</div>
 		</div>
 
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
+	<!-- View Video Modal -->
+	<div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="false">
 	  <div class="modal-dialog">
-	    <div class="modal-content">
-	     <div class="modal-body">
+	    <div class="modal-content-video">
+	     <div class="modal-body-video">
 	        <video  width="100%" height="100%"controls autoplay>
 			  <source src="{{url_for('static', filename='videos/1396164424.32.mp4')}}" type="video/mp4">
 			</video>	      
@@ -83,6 +75,50 @@
 	    </div>
 	  </div>
 	</div>
+
+	
+	<div class="row content">
+		<br>
+		<!-- Button trigger modal -->
+		<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#share_modal">
+		  Share
+		</button>
+
+	</div>
+
+	<!-- Modal -->
+	<div class="modal fade" id="share_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	        <h4 class="modal-title" id="myModalLabel">Share your handy message!</h4>
+	      </div>
+
+	      <form name="input" method="POST" action="/sendmail">
+	      <div class="modal-body">
+				<input type="text" name="to" class="form-control" placeholder="TO"> <br>
+				<input type="text" name="subject" placeholder="SUBJECT" class="form-control"><br>
+				<input type="hidden" name="filename" placehorlder="video" class="form-control" value="{{url_for('static', filename='videos/1396164424.32.mp4')}}"><br>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+	        <input type="submit" value="SEND" class="btn btn-success" >
+	      </div>
+	      </form>
+	    </div>
+	  </div>
+	</div>
+</div>
+
+
+
+
+
+
+
+
+
 
 
 		<!-- Bootstrap core JavaScript
